# cnb-clue-generator

./: config.py  pyproject.toml
boards/: eval_boards.json  train_boards.json  traing_pairs.json  word_pairs.json
cnb_clue_generator/board_generator/: generate_boards.py
cnb_clue_generator/clue_generator/: clue_generator_base.py  gpt_clue_generator.py  gpt_clue_generator_base.py  gpt_few_shot_clue_generator.py  gpt_fine_tuned_clue_generator.py  gpt_piecewise_clue_generator.py  gpt_simple_clue_generator.py  vector_clue_generator.py
cnb_clue_generator/evaluation/: evaluate_clues.py  generate_clues.py
cnb_clue_generator/fine_tuned_model/: prepare_train_data.py
cnb_clue_generator/gpt_piecewise_helpers/: gpt_clue_proposer.py  gpt_relation_classifier.py
cnb_clue_generator/utils/: create_model.py  gpt_completion_model.py
data/: boards.json  few_shot_prompt.txt  train_data.json  train_data_prepared.jsonl  word_pairs.json
data/word_pairs_csv/: aceandstuff_batch.csv  harley_batch.csv  thefantasyicon_batch.csv
generated_clues/: few_shot.json  glovenet.json  glovenet_neg_buffer.json  simple_gpt_word_pairs.json  word2vec.json  word2vec_neg_buffer.json
static/: boards.json  few_shot_samples.json  simple_prompt.txt
tests/data/piecewise_scenarios/: scenario_1.json  scenario_2.json
tests/tests/: test_piecewise_clue_generator.py
tools/: create_word_pairs.py  create_word_pairs_csv.py  test_openai.py  test_scenario.py
