[tool.poetry]
name = "cnb-clue-generator"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "cnb_clue_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.25.0"
gensim = "^4.2.0"

[tool.poetry.scripts]
test-openai     = "tools.test_openai:main"
test-scenario   = "tools.test_scenario:main"
create-word-pairs = "tools.create_word_pairs:main"

create-boards   = "cnb_clue_generator.board_generator.generate_boards:main"
generate-clues  = "cnb_clue_generator.evaluation.generate_clues:main"
evaluate-clues  = "cnb_clue_generator.evaluation.evaluate_clues:main"
prepare-train-data  = "cnb_clue_generator.fine_tuned_model.prepare_train_data:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
